--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
       <header class="header-bg">
-            <div class="header">
+            <div class="header container">
                   <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
                   <nav aria-label="primaria">
                         <ul class="header-menu font-1-m cor-0">
@@ -28,7 +28,7 @@
             </div>
       </header>
       <main class="introducao-bg">
-            <div class="introducao">
+            <div class="introducao container">
                   <div class="introducao-conteudo">
                         <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
                         <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
@@ -39,6 +39,34 @@
                   </div>
             </div>
       </main>
+      <article class="bicicletas-lista">
+            <h2 class="container font-1-xxl">escolha a sua <span class="cor-p1">.</span> </h2>
+            <ul>
+                  <li>
+                        <a href="./bicicletas/magic.html">
+                              <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+                              <h3 class="font-1-xl">Magic Might</h3>
+                              <span class="font-2-m cor-8">R$2499,00</span>
+                        </a>
+                  </li>
+                  <li>
+                        <a href="./bicicletas/magic.html">
+                              <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+                              <h3 class="font-1-xl">Nimbus Stark</h3>
+                              <span class="font-2-m cor-8">R$4999,00</span>
+                        </a>
+                  </li>
+                  <li>
+                        <a href="./bicicletas/magic.html">
+                              <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+                              <h3 class="font-1-xl">Nebula Cosmic</h3>
+                              <span class="font-2-m cor-8">R$3999,00</span>
+                        </a>
+                  </li>
+
+            </ul>
+      </article>
+
 </body>
 
 </html>
