--- a/index.html
+++ b/index.html
@@ -116,6 +116,37 @@
 
             </div>
       </section>
+      <article class="seguros-bg" aria-label="seguros">
+            <div class="seguros container">
+                  <h2 class="container font-1-xxl cor-0">nossos parceiros<span class="cor-p1">.</span> </h2>
+
+                  <div class="seguros-item">
+                        <h3 class="font-1-xl cor-0">PRATA</h3>
+                        <span class="font-1-xl cor-0">R$199 <span class="font-1-xs cor-6">mensal</span></span>
+                        <ul class="font-2-m cor-0">
+                              <li>Duas trocas por ano</li>
+                              <li>Assistência técnica</li>
+                              <li>Suporte 08h ás 18h</li>
+                              <li>Cobertura estadual</li>
+                        </ul>
+                        <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+                  </div>
+                  <div class="seguros-item">
+                        <h3 class="font-1-xl cor-p1">Ouro</h3>
+                        <span class="font-1-xl cor-0">R$299 <span class="font-1-xs cor-6">mensal</span></span>
+                        <ul class="font-2-m cor-0">
+                              <li>Cinco trocas por ano</li>
+                              <li>Assistência especial</li>
+                              <li>Suporte 24h</li>
+                              <li>Cobertura nacional</li>
+                              <li>Desconto em parceiros</li>
+                              <li>Acesso ao clube Bikcraft</li>
+                        </ul>
+                        <a class="botao" href="./orcamento.html">Inscreva-se</a>
+                  </div>
+            </div>
+
+      </article>
 </body>
 
 </html>
