--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </section>
       <article class="seguros-bg" aria-label="seguros">
             <div class="seguros container">
-                  <h2 class="container font-1-xxl cor-0">nossos parceiros<span class="cor-p1">.</span> </h2>
+                  <h2 class="container font-1-xxl cor-0">seguros<span class="cor-p1">.</span> </h2>
 
                   <div class="seguros-item">
                         <h3 class="font-1-xl cor-0">PRATA</h3>
