--- a/seguros.html
+++ b/seguros.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
-  <title>Termos e condições | Bikcraft - Bicicletas Elétricas</title>
+  <title>Seguro | Bikcraft - Bicicletas Elétricas</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 
 </head>
 
-<body id="termos">
+<body id="bicicletas">
   <header class="header-bg">
     <div class="header container">
       <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
@@ -30,22 +30,12 @@
   <main>
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-5">Termos de uso</p>
-        <h1 class="font-1-xxl cor-0">termos e condições<span class="cor-p1">.</span></h1>
+        <p class="font-2-l-b cor-5">escolha o seguro</p>
+        <h1 class="font-1-xxl cor-0">você seguro<span class="cor-p1">.</span></h1>
       </div>
-
     </div>
 
-    <div class="termos font-2-s cor-10 container">
-      <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
-      <p>1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-      <p>1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-      <p>1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-      <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
-      <p>2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-      <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
-      <p>3.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-    </div>
+
   </main>
   <footer class="footer-bg">
     <div class="footer container">
