--- a/seguros.html
+++ b/seguros.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body id="bicicletas">
+<body id="seguros">
   <header class="header-bg">
     <div class="header container">
       <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
@@ -27,7 +27,7 @@
       </nav>
     </div>
   </header>
-  <main>
+  <main class="seguros-bg">
     <div class="titulo-bg">
       <div class="titulo container">
         <p class="font-2-l-b cor-5">escolha o seguro</p>
@@ -35,8 +35,108 @@
       </div>
     </div>
 
+    <div class="seguros container">
 
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-0">PRATA</h3>
+        <span class="font-1-xl cor-0">R$199 <span class="font-1-xs cor-6">mensal</span></span>
+        <ul class="font-2-m cor-0">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08h ás 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+      </div>
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-p1">Ouro</h3>
+        <span class="font-1-xl cor-0">R$299 <span class="font-1-xs cor-6">mensal</span></span>
+        <ul class="font-2-m cor-0">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao clube Bikcraft</li>
+        </ul>
+        <a class="botao" href="./orcamento.html">Inscreva-se</a>
+      </div>
+    </div>
   </main>
+
+  <article class="vantagens-bg">
+    <div class="vantagens container">
+      <h2 class="font-1-xxl cor-0">vantagens<span class="cor-p1">.</span></h2>
+      <ul>
+        <li>
+          <img src="./img/icones/eletrica.svg" alt="">
+          <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
+          <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
+        </li>
+        <li>
+          <img src="./img/icones/carbono.svg" alt="">
+          <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
+          <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
+        </li>
+        <li>
+          <img src="./img/icones/sustentavel.svg" alt="">
+          <h3 class="font-1-l cor-0">Sustentável</h3>
+          <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
+        </li>
+        <li>
+          <img src="./img/icones/rastreador.svg" alt="">
+          <h3 class="font-1-l cor-0">Recuperação</h3>
+          <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+        </li>
+        <li>
+          <img src="./img/icones/seguro.svg" alt="">
+          <h3 class="font-1-l cor-0">Segurança</h3>
+          <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+        </li>
+        <li>
+          <img src="./img/icones/seguro.svg" alt="">
+          <h3 class="font-1-l cor-0">Rapidez</h3>
+          <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+        </li>
+      </ul>
+
+    </div>
+
+  </article>
+  <article class="perguntas container">
+    <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
+    <dl>
+      <div>
+        <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Como posso entrar em contato?</dt>
+        <dd class="font-2-s cor-9">Através do email e telefone de contato.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
+        <dd class="font-2-s cor-9">Temos desconto para pagamento em boleto ou via PIX.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
+        <dd class="font-2-s cor-9">Todos nossos produtos tem garantia de 12 meses.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
+        <dd class="font-2-s cor-9">Não. Aceitamos parcelamento somente via cartão de crédito</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
+        <dd class="font-2-s cor-9">As trocas são ilimitadas em caso de defeito</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Qual Bikcraft devo escolher para o meu tamanho?</dt>
+        <dd class="font-2-s cor-9">Nas páginas de cada produto contém na descrição suas dimensões e altura indicada.</dd>
+      </div>
+    </dl>
+  </article>
+
   <footer class="footer-bg">
     <div class="footer container">
       <img src="./img/bikcraft.svg" alt="Bikcraft">
