--- a/bicicletas.html
+++ b/bicicletas.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   <title>Bicicletas | Bikcraft - Bicicletas Elétricas</title>
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
 <body id="bicicletas">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -37,17 +38,17 @@
 
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+        <img src="./img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta">
         <span class="font-2-m cor-0">R$4999,00</span>
       </div>
       <div class="bicicletas-conteudo">
         <h2 class="font-1-xl">Nimbus Stark</h2>
         <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
-          <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-          <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-          <li><img src="./img/icones/velocidade.svg" alt=""> 50km/h</li>
-          <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+          <li><img src="./img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
+          <li><img src="./img/icones/carbono.svg" width="32" height="32" alt="">Fibra de Carbono</li>
+          <li><img src="./img/icones/velocidade.svg" width="32" height="32" alt=""> 50km/h</li>
+          <li><img src="./img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
         </ul>
         <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
 
@@ -57,17 +58,17 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          <img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta">
           <span class="font-2-m cor-0">R$2499,00</span>
         </div>
         <div class="bicicletas-conteudo">
           <h2 class="font-1-xl cor-0">Magic Might</h2>
           <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-5">
-            <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-            <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-            <li><img src="./img/icones/velocidade.svg" alt="">55km/h</li>
-            <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+            <li><img src="./img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
+            <li><img src="./img/icones/carbono.svg" width="32" height="32" alt="">Fibra de Carbono</li>
+            <li><img src="./img/icones/velocidade.svg" width="32" height="32" alt="">55km/h</li>
+            <li><img src="./img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
           </ul>
           <a class="botao seta" href="./bicicletas/magic.html
           ">Mais Sobre</a>
@@ -77,17 +78,17 @@
 
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta cinza">
+        <img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta cinza">
         <span class="font-2-m cor-0">R$3999,00</span>
       </div>
       <div class="bicicletas-conteudo">
         <h2 class="font-1-xl">Nebula Cosmic</h2>
         <p class="font-2-s cor-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
-          <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-          <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
-          <li><img src="./img/icones/velocidade.svg" alt="">60km/h</li>
-          <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+          <li><img src="./img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
+          <li><img src="./img/icones/carbono.svg" width="32" height="32" alt="">Fibra de Carbono</li>
+          <li><img src="./img/icones/velocidade.svg" width="32" height="32" alt="">60km/h</li>
+          <li><img src="./img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
         </ul>
         <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
       </div>
@@ -97,7 +98,7 @@
   </main>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -107,9 +108,9 @@
           <li>São Paulo - SP</li>
         </ul>
         <div class="footer-redes">
-          <a href="./"> <img src="./img/redes/instagram.svg" alt="Instagram"></a>
-          <a href="./"> <img src="./img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"> <img src="./img/redes/youtube.svg" alt="Youtube"></a>
+          <a href="./"> <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram"></a>
+          <a href="./"> <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"> <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube"></a>
         </div>
       </div>
       <div class="footer-informacoes">
