--- a/orcamento.html
+++ b/orcamento.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   <title>Orçamento | Bikcraft - Bicicletas Elétricas</title>
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
 <body id="orcamento">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -52,10 +53,10 @@
           <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
           <div class="orcamento-detalhes">
             <ul class="font-1-xs cor-8">
-              <li><img src="./img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
-              <li><img src="./img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
-              <li><img src="./img/icones/velocidade.svg" alt=""> 50 km/h</li>
-              <li><img src="./img/icones/rastreador.svg" alt=""> Rastreador</li>
+              <li><img src="./img/icones/eletrica.svg" width="32" height="32" alt=""> Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" width="32" height="32" alt=""> Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" width="32" height="32" alt=""> 50 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" width="32" height="32" alt=""> Rastreador</li>
             </ul>
             <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
           </div>
@@ -64,10 +65,10 @@
           <label for="magic">Magic Might <span>R$ 2499</span></label>
           <div class="orcamento-detalhes">
             <ul class="font-1-xs cor-8">
-              <li><img src="./img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
-              <li><img src="./img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
-              <li><img src="./img/icones/velocidade.svg" alt=""> 45 km/h</li>
-              <li><img src="./img/icones/rastreador.svg" alt=""> Rastreador</li>
+              <li><img src="./img/icones/eletrica.svg" width="32" height="32" alt=""> Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" width="32" height="32" alt=""> Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" width="32" height="32" alt=""> 45 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" width="32" height="32" alt=""> Rastreador</li>
             </ul>
             <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
           </div>
@@ -76,10 +77,10 @@
           <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
           <div class="orcamento-detalhes">
             <ul class="font-1-xs cor-8">
-              <li><img src="./img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
-              <li><img src="./img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
-              <li><img src="./img/icones/velocidade.svg" alt=""> 40 km/h</li>
-              <li><img src="./img/icones/rastreador.svg" alt=""> Rastreador</li>
+              <li><img src="./img/icones/eletrica.svg" width="32" height="32" alt=""> Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" width="32" height="32" alt=""> Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" width="32" height="32" alt=""> 40 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" width="32" height="32" alt=""> Rastreador</li>
             </ul>
             <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta branca">
           </div>
@@ -146,7 +147,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -156,9 +157,9 @@
           <li>São Paulo - SP</li>
         </ul>
         <div class="footer-redes">
-          <a href="./"> <img src="./img/redes/instagram.svg" alt="Instagram"></a>
-          <a href="./"> <img src="./img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"> <img src="./img/redes/youtube.svg" alt="Youtube"></a>
+          <a href="./"> <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram"></a>
+          <a href="./"> <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"> <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube"></a>
         </div>
       </div>
       <div class="footer-informacoes">
