--- a/seguros.html
+++ b/seguros.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   <title>Seguro | Bikcraft - Bicicletas Elétricas</title>
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
 <body id="seguros">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -69,32 +70,32 @@
       <h2 class="font-1-xxl cor-0">vantagens<span class="cor-p1">.</span></h2>
       <ul>
         <li>
-          <img src="./img/icones/eletrica.svg" alt="">
+          <img src="./img/icones/eletrica.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
           <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
         </li>
         <li>
-          <img src="./img/icones/carbono.svg" alt="">
+          <img src="./img/icones/carbono.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
           <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
         </li>
         <li>
-          <img src="./img/icones/sustentavel.svg" alt="">
+          <img src="./img/icones/sustentavel.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Sustentável</h3>
           <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
         </li>
         <li>
-          <img src="./img/icones/rastreador.svg" alt="">
+          <img src="./img/icones/rastreador.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Recuperação</h3>
           <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
         </li>
         <li>
-          <img src="./img/icones/seguro.svg" alt="">
+          <img src="./img/icones/seguro.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Segurança</h3>
           <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
         </li>
         <li>
-          <img src="./img/icones/seguro.svg" alt="">
+          <img src="./img/icones/seguro.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Rapidez</h3>
           <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
         </li>
@@ -139,7 +140,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -149,9 +150,9 @@
           <li>São Paulo - SP</li>
         </ul>
         <div class="footer-redes">
-          <a href="./"> <img src="./img/redes/instagram.svg" alt="Instagram"></a>
-          <a href="./"> <img src="./img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"> <img src="./img/redes/youtube.svg" alt="Youtube"></a>
+          <a href="./"> <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram"></a>
+          <a href="./"> <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"> <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube"></a>
         </div>
       </div>
       <div class="footer-informacoes">
