--- a/termos.html
+++ b/termos.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   <title>Termos e condições | Bikcraft - Bicicletas Elétricas</title>
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
 <body id="termos">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -49,7 +50,7 @@
   </main>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -59,9 +60,9 @@
           <li>São Paulo - SP</li>
         </ul>
         <div class="footer-redes">
-          <a href="./"> <img src="./img/redes/instagram.svg" alt="Instagram"></a>
-          <a href="./"> <img src="./img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"> <img src="./img/redes/youtube.svg" alt="Youtube"></a>
+          <a href="./"> <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram"></a>
+          <a href="./"> <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"> <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube"></a>
         </div>
       </div>
       <div class="footer-informacoes">
