--- a/seguros.html
+++ b/seguros.html
@@ -47,7 +47,7 @@
           <li>Suporte 08h ás 18h</li>
           <li>Cobertura estadual</li>
         </ul>
-        <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+        <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
       </div>
       <div class="seguros-item">
         <h3 class="font-1-xl cor-p1">Ouro</h3>
@@ -60,7 +60,7 @@
           <li>Desconto em parceiros</li>
           <li>Acesso ao clube Bikcraft</li>
         </ul>
-        <a class="botao" href="./orcamento.html">Inscreva-se</a>
+        <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
       </div>
     </div>
   </main>
@@ -169,6 +169,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
