--- a/contato.html
+++ b/contato.html
@@ -10,6 +10,7 @@
 
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="contato">
